--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,9 @@
 {
+  "arrowParens": "avoid",
   "semi": true,
-  "arrowParens": "always",
-  "singleQuote": true
+  "singleQuote": true,
+  "trailingComma": "none",
+  "printWidth": 100,
+  "htmlWhitespaceSensitivity": "ignore",
+  "endOfLine":"auto"
 }
