--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
+    "build:analyze": "nuxt build --analyze",
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
@@ -28,11 +29,13 @@
     "nuxt": "2.12.2"
   },
   "devDependencies": {
+    "@nuxtjs/color-mode": "1.0.0",
     "@nuxtjs/eslint-config": "3.0.0",
     "@nuxtjs/eslint-module": "2.0.0",
     "@nuxtjs/stylelint-module": "3.2.2",
     "@nuxtjs/tailwindcss": "2.0.0",
     "@vue/test-utils": "1.0.2",
+    "autoprefixer": "9.7.6",
     "babel-eslint": "10.1.0",
     "babel-jest": "26.0.1",
     "eslint": "7.0.0",
@@ -42,11 +45,20 @@
     "husky": "4.2.5",
     "jest": "26.0.1",
     "lint-staged": "10.2.2",
+    "nuxt-purgecss": "1.0.0",
     "prettier": "2.0.5",
     "stylelint": "13.3.3",
     "vue-jest": "3.0.5"
   },
   "resolutions": {
     "babel-core": "7.0.0-bridge.0"
-  }
+  },
+  "browserslist": [
+    ">= 1% in GB",
+    "ie 11",
+    "last 3 Chrome versions",
+    "last 2 Firefox versions",
+    "last 2 Edge versions",
+    "last 3 Safari versions"
+  ]
 }
