--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   "dependencies": {
     "@nuxtjs/axios": "5.10.3",
     "@nuxtjs/dotenv": "1.4.1",
+    "@nuxtjs/firebase": "5.2.0",
     "@nuxtjs/pwa": "3.0.0-beta.20",
+    "firebase": "7.14.3",
     "nuxt": "2.12.2"
   },
   "devDependencies": {
