--- a/package.json
+++ b/package.json
@@ -23,33 +23,33 @@
     }
   },
   "dependencies": {
-    "@nuxtjs/axios": "5.10.3",
+    "@nuxtjs/axios": "5.11.0",
     "@nuxtjs/dotenv": "1.4.1",
-    "@nuxtjs/firebase": "5.2.0",
+    "@nuxtjs/firebase": "6.0.1",
     "@nuxtjs/pwa": "3.0.0-beta.20",
-    "firebase": "7.14.3",
+    "firebase": "7.15.1",
     "nuxt": "2.12.2"
   },
   "devDependencies": {
     "@nuxtjs/color-mode": "1.0.0",
     "@nuxtjs/eslint-config": "3.0.0",
     "@nuxtjs/eslint-module": "2.0.0",
-    "@nuxtjs/stylelint-module": "3.2.2",
+    "@nuxtjs/stylelint-module": "4.0.0",
     "@nuxtjs/tailwindcss": "2.0.0",
-    "@vue/test-utils": "1.0.2",
-    "autoprefixer": "9.7.6",
+    "@vue/test-utils": "1.0.3",
+    "autoprefixer": "9.8.0",
     "babel-eslint": "10.1.0",
     "babel-jest": "26.0.1",
-    "eslint": "7.0.0",
+    "eslint": "7.2.0",
     "eslint-config-prettier": "6.11.0",
-    "eslint-plugin-nuxt": ">=0.4.2",
-    "eslint-plugin-prettier": "3.1.3",
+    "eslint-plugin-nuxt": "1.0.0",
+    "eslint-plugin-prettier": "3.1.4",
     "husky": "4.2.5",
     "jest": "26.0.1",
-    "lint-staged": "10.2.2",
+    "lint-staged": "10.2.11",
     "nuxt-purgecss": "1.0.0",
     "prettier": "2.0.5",
-    "stylelint": "13.3.3",
+    "stylelint": "13.6.0",
     "vue-jest": "3.0.5"
   },
   "resolutions": {
